# keyring-rs

./: Cargo.toml  DESIGN.md
.github/workflows/: ci.yml
contrib/systemd/: keyring-daemon.service  keyring-daemon.socket
docs/: gnome-keyring-migration.md
protocol/: Cargo.toml
protocol/src/: lib.rs
scripts/: check_module_coverage.py  run_coverage_ci.sh  run_dbus_integration_tests.sh
src/: access.rs  crypto.rs  dbus.rs  dbus_helpers.rs  dbus_tests.rs  error.rs  lib.rs  main.rs  storage.rs  unlock.rs
